@@ -363,7 +363,11 @@ def lookupKeys(linkcl, key, ids, num_re=num_re):
     l = []
     for entry in ids:
         if num_re.match(entry):
-            label = linkcl.get(entry, key)
+            try:
+		label = linkcl.get(entry, key)
+	    except IndexError:
+		# fall back to id if illegal (avoid template crash)
+                label = entry
             # fall back to designator if label is None
             if label is None: label = '%s%s'%(linkcl.classname, entry)
             l.append(label)
